--- a/main.tex
+++ b/main.tex
@@ -20,7 +20,7 @@
   \copyrightpg
   \ifdef{\dedication}{\dedication}{}
   \include{preface}
-  \include{preface2}
+  \include{abstract}
   \tableofcontents
 
 
