--- a/preamble.tex
+++ b/preamble.tex
@@ -100,7 +100,7 @@ height=21cm,top=3.7cm,headsep=1cm,footskip=1.1cm]{geometry}
 %---------------------+
 \usepackage{graphicx}           % To include graphics files
 %\graphicspath{{/Users/Pedro/OneDrive/programming/Latex/logos/}{figures/}{tables/}}
-
+\usepackage{pdflscape}
 \usepackage[font=small,labelfont=bf]{caption}
 \captionsetup*[figure]{format=plain,justification=centerlast,labelsep=quad}
 \captionsetup*[table]{justification=centering,labelsep=newline}
